Fixed bug with wrapping li items in header

--- a/css/header.css
+++ b/css/header.css
@@ -13,15 +13,14 @@ header {
 nav {
   margin-top: 0px;
   margin-bottom: 0px;
-  padding: 10px;
+  /* padding: 10px; */
   font-family: Arial, Helvetica, sans-serif;
-  /* background-color: rgb(255, 255, 255); */
 }
 
 nav a {
   text-decoration: none;
-  padding: 15px;
   color: rgb(0, 0, 0);
+  padding: 15px;
 }
 
 nav a:hover {
@@ -40,11 +39,9 @@ nav ul {
 }
 
 nav li {
-  display: inline;
-  padding: 0px;
+  display: inline-flex;
   margin-left: 0px;
   margin-right: 0px;
-  min-width: 100px;
 }
 
 .active {
@@ -63,6 +60,7 @@ nav li {
 }
 
 .flex-nav {
+  padding: auto;
   display: flex;
   justify-content: flex-end;
   align-items: center;
